attempt to fix modal sizing and positioning on mobile attempt 5

--- a/src/App.css
+++ b/src/App.css
@@ -408,7 +408,7 @@ p {
 
   .modal {
     max-height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-    max-height: calc(var(--vh, 1vh) * 90);
+    max-height: calc(var(--vh, 1vh) * 100);
     position: absolute;
     top: 10%;
   }
